--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: "Marie Skłodowska–Curie Fellow in the TRIPOP team at the Centre 
 domain: nickcollins-craft.github.io
 #baseurl: # the subpath of your site, e.g. /blog
 url: https://nickcollins-craft.github.io
-twitter_username: NCollins-Craft
+twitter_username: NCollinsCraft
 github_username:  nickcollins-craft
 mastodon:
  - username: NickCollinsCraft
