--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Nicholas Collins-Craft
 email: nicholas.collins-craft@inria.fr
 description: "Marie Skłodowska–Curie Fellow in the TRIPOP team at the Centre Inria de l'Université Grenoble Alpes"
 domain: nickcollins-craft.github.io
-baseurl: /home # the subpath of your site, e.g. /blog
-url: https://nickcollins-craft.github.io
+#baseurl: # the subpath of your site, e.g. /blog
+url: https://nickcollins-craft.github.io/home/
 twitter_username: NCollinsCraft
 github_username:  nickcollins-craft
 mastodon:
