Try changing the config file to swap order of home and about
 - Now listed at the bottom of the config

TODO

 - Find out how to make the website go to /home as the landing page

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ mastodon:
 theme: minima
 plugins:
   - jekyll-feed
+header_files:
+  - home.md
+  - about.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
