--- a/_config.yml
+++ b/_config.yml
@@ -30,13 +30,14 @@ mastodon:
  - instance: mathstodon.xyz
 
 # Build settings
-theme: minima
+#theme: minima
+remote_theme: hydecorp/hydejack@v9.1.6
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 header_files:
   - about.md
   - publications.md
-  - CV.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
