Change so that items are accessible from the sidebar
 - Also means that the CV is easily viewable :)

--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,15 @@ remote_theme: hydecorp/hydejack@v9.1.6
 plugins:
   - jekyll-feed
   - jekyll-include-cache
-header_files:
-  - about.md
-  - publications.md
+menu:
+  - title: About me
+    url:   /about-me/
+  - title: Publications
+    url:   /publications/
+  - title: CV
+    url:   /CV.pdf/
+#  - title: About
+#    url:   /about/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
