Try going back to "non-url" links to pages
 - Sidebar shows links to pages, CV etc if I have it as a "https://nick... before the specific location, but it then shows a little arrow as if it were an external link
 - So try going back to the old way and wait longer for it to rebuild

--- a/_config.yml
+++ b/_config.yml
@@ -37,11 +37,11 @@ plugins:
   - jekyll-include-cache
 menu:
   - title: About me
-    url:   https://nickcollins-craft.github.io/about-me/
+    url:   /about-me/
   - title: Publications
-    url:   https://nickcollins-craft.github.io/publications/
+    url:   /publications/
   - title: CV
-    url:   https://nickcollins-craft.github.io/CV.pdf/
+    url:   /CV.pdf/
 #  - title: About
 #    url:   /about/
 
