Mostly better, but didn't quite serve the CV correctly
 - Try /CV.pdf, rather than /CV.pdf/

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ menu:
   - title: Publications
     url:   /publications/
   - title: CV
-    url:   /CV.pdf/
+    url:   /CV.pdf
 #  - title: About
 #    url:   /about/
 
