--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,23 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Nicholas Collins-Craft
-email: nicholas.collins-craft@inria.fr
+#email: nicholas.collins-craft@inria.fr
 description: "Marie Skłodowska–Curie Fellow in the TRIPOP team at the Centre Inria de l'Université Grenoble Alpes"
 domain: nickcollins-craft.github.io
 url: https://nickcollins-craft.github.io/
-twitter_username: NCollinsCraft
-github_username:  nickcollins-craft
-mastodon:
- - username: NickCollinsCraft
- - instance: mathstodon.xyz
+author:
+  name: Nicholas Collins-Craft
+  email: nicholas.collins-craft@inria.fr
+  picture:  /assets/img/me.jpg
+  social:
+    twitter: NCollinsCraft
+    github: nickcollins-craft
+    email: nicholas.collins-craft@inria.fr
+#github_username:  nickcollins-craft
+#twitter_username: NCollinsCraft
+#mastodon:
+# - username: NickCollinsCraft
+# - instance: mathstodon.xyz
 
 # Build settings
 #theme: minima
@@ -35,6 +43,7 @@ remote_theme: hydecorp/hydejack@v9.1.6
 plugins:
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-avatar
 menu:
   - title: About me
     url:   /about-me/
