--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,10 @@ remote_theme: hydecorp/hydejack@v9.1.6
 accent_image:          /assets/img/sidebar-bg.jpg
 accent_color:          rgb(79,177,186)
 
+# Add these to try and make the little symbol on the left edge of the tab custom (e.g. the "f" of Facebook)
+favicon: /assets/icons/favicon.ico
+apple_touch_icon: /assets/icons/apple-touch-icon.png
+
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
 # Defaults to `accent_color`.
