--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ remote_theme: hydecorp/hydejack@v9.1.6
 # ----------------------------------------------------------------------------------------
 
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/sidebar-bg.jpg
+accent_image:          /assets/img/mountains_photo_1.jpg/ #/assets/img/sidebar-bg.jpg
 accent_color:          rgb(79,177,186)
 
 # Add these to try and make the little symbol on the left edge of the tab custom (e.g. the "f" of Facebook)
