--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ menu:
   - title: Publications
     url:   /publications/
   - title: CV
-    url:   /CV.pdf
+    url:   /assets/documents/NACollins-CraftCV.pdf
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -88,7 +88,7 @@ remote_theme: hydecorp/hydejack@v9.1.6
 
 # Sidebar image and theme color of the site.
 # accent_image: /assets/img/sidebar-bg.jpg
-accent_image:          /assets/img/mountains_photo_1.jpg
+accent_image:          /assets/img/mountains_photo_2.jpg
 accent_color:          rgb(79,177,186)
 
 # Add these to try and make the little symbol on the left edge of the tab custom (e.g. the "f" of Facebook)
